--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -15,12 +15,10 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'com.google.code.gson:gson:2.8.6'
+	implementation group: "com.twilio.sdk", name: "twilio", version: "7.42.0"
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
-	compile group: "com.twilio.sdk", name: "twilio", version: "7.17.+"
-	compile group: "com.sparkjava", name: "spark-core", version: "2.7.1"
-	compile group: "org.slf4j", name: "slf4j-simple", version: "1.7.21"
 }
 
 test {
