--- a/webapp/package.json
+++ b/webapp/package.json
@@ -11,6 +11,7 @@
     "react-google-maps": "^9.4.5",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
+    "react-sidebar": "^3.0.2",
     "semantic-ui-react": "^0.88.1"
   },
   "scripts": {
