--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -17,6 +17,7 @@ dependencies {
 	implementation 'com.google.code.gson:gson:2.8.6'
 	implementation group: "com.twilio.sdk", name: "twilio", version: "7.42.0"
 	implementation 'com.stripe:stripe-java:7.26.0'
+	compile 'org.jsoup:jsoup:1.12.1'
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
